--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/cv">CV</a>
                     </li>
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <li>
+                      <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                    <!--<li>
+                     <a class="nav-link" href="/oraltest">Présentation</a>
+                    </li>
+                    -->
                 </ul>
             </div>
         </nav>
