--- a/templates/blog/contact.html.twig
+++ b/templates/blog/contact.html.twig
@@ -25,7 +25,12 @@
           </li>
           <li>          
             <a class="nav-link" href="/contact">Contact</a>
-          </li>                        
+          <!--</li>                        
+            <a class="nav-link" href="/oraltest">Présentation</a>
+          <li>
+          
+          </li>
+          -->
       </div>
     </nav>
     <br>
