--- a/templates/blog/cv.html.twig
+++ b/templates/blog/cv.html.twig
@@ -32,6 +32,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact</a>
                     </li>
+                    <!--<li>
+                        <a class="nav-link" href="/oraltest">Présentation</a>
+                    </li>    
+                    -->
                 </ul>
             </div>
         </nav>
