--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
       <meta charset="UTF-8">
       <title>ACCUEIL</title>
 		    
       <link rel="stylesheet" type="text/css" href="/css/slideshow.css" media="all"/>
       <link rel= "stylesheet" href="https://bootswatch.com/5/slate/bootstrap.min.css">
-    </head>
+  </head>
 
-    <body>
+  <body>
      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
        <a class="navbar-brand" href="/">ACCUEIL</a>
        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation"  "fixed-top text-uppercase" id="mainNav">
@@ -34,10 +34,13 @@
      </nav>
      <br>
      <center><h1><u> Je me présente à travers le WEB </h1></u></center>
-     <p> Dans ce site WEB ,Je vais me présenter en y introduisant mon Portfolio de compétences et mon CV pour réussir le projet professionnel de mes rêves en mentionnant la majorité de mes compétences ,mes loisirs ,mes centres d'intérêt ,mes diplomes ainsi que mon expérience professionnelle .
-     </p>
-     <center><h5><u>Mon identité</u></h5>
      <br>
+     <pre>
+              Dans ce site WEB ,Je vais me présenter en y introduisant mon Portfolio de compétences et mon CV pour réussir le projet professionnel de mes rêves  
+          en mentionnat la majorité de mes compétences ,mes loisirs ,mes centres d'intérêt ,mes diplomes ainsi que mon expérience professionnelle .</p>
+      </pre> 
+     <center><h5><u>Mon identité</u></h5>
+     
      <div class="card border-primary mb-3" style="max-width: 25rem;">
        <div class="card-header"></div>
        <div class="card-body">
@@ -73,8 +76,7 @@
     <footer>
       <small class="text-muted">© Copyright - Tout droit réservé - (copie interdite) </small>
     </footer>  
-  
-   </body>
+  </body>
 </html>
 
 
