--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -72,7 +72,7 @@
     </div>       
     <br>
     <center><h5><u>Mes loisirs</u></h5></center>
-    <center><button type="button" class="btn btn-info"><a href="/loisirs">CLIQUEZ ICI</a></button></center>
+    <center><button type="button" class="btn btn-info"><a href="/loisirs"><strong>Pour en savoir plus</strong></a></button></center>
     <footer>
       <small class="text-muted">© Copyright - Tout droit réservé - (copie interdite) </small>
     </footer>  
