--- a/templates/blog/oraltest.html.twig
+++ b/templates/blog/oraltest.html.twig
@@ -1,4 +1,11 @@
 {% extends 'base.html.twig' %}
 
-
+{% block body %}
 <h1> PARTIE DÉMONSTRATION DE SOUTENANCE <h1>
+
+
+Ici c'est ma démonstration de modification qui etait en temps réel lors de la soutenance devant mon Prof 
+(page de test)
+
+
+{% endblock %}
